// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateOpenApiDocument @kbn/config-schema generates references in the expected format 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "my.id": Object {
        "maxLength": 1,
        "type": "string",
      },
      "my.name": Object {
        "maxLength": 1,
        "type": "string",
      },
    },
  },
  "externalDocs": undefined,
  "info": Object {
    "description": undefined,
    "title": "test",
    "version": "99.99.99",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/foo/{id}": Object {
      "get": Object {
        "operationId": "/foo/{id}#0",
        "parameters": Array [
          Object {
            "in": "header",
            "name": "elastic-api-version",
            "schema": Object {
              "default": "2023-10-31",
              "enum": Array [
                "2023-10-31",
              ],
              "type": "string",
            },
          },
          Object {
            "description": undefined,
            "in": "path",
            "name": "id",
            "required": true,
            "schema": Object {
              "$ref": "#/components/schemas/my.id",
            },
          },
        ],
        "requestBody": Object {
          "content": Object {
            "application/json; Elastic-Api-Version=2023-10-31": Object {
              "schema": Object {
                "additionalProperties": false,
                "properties": Object {
                  "name": Object {
                    "$ref": "#/components/schemas/my.name",
                  },
                  "other": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "name",
                  "other",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json; Elastic-Api-Version=2023-10-31": Object {
                "schema": Object {
                  "maxLength": 10,
                  "minLength": 1,
                  "type": "string",
                },
              },
            },
            "description": "No description",
          },
        },
      },
    },
  },
  "security": Array [
    Object {
      "basicAuth": Array [],
    },
    Object {
      "apiKeyAuth": Array [],
    },
  ],
  "servers": Array [
    Object {
      "url": "https://test.oas",
    },
  ],
  "tags": undefined,
}
`;

exports[`generateOpenApiDocument @kbn/config-schema generates the expected OpenAPI document 1`] = `
Object {
  "components": Object {
    "schemas": Object {},
  },
  "externalDocs": undefined,
  "info": Object {
    "description": undefined,
    "title": "test",
    "version": "99.99.99",
  },
  "openapi": "3.0.0",
  "paths": Object {
    "/bar": Object {
      "get": Object {
        "operationId": "/bar#0",
        "parameters": Array [
          Object {
            "in": "header",
            "name": "elastic-api-version",
            "schema": Object {
              "default": "oas-test-version-2",
              "enum": Array [
                "oas-test-version-1",
                "oas-test-version-2",
              ],
              "type": "string",
            },
          },
        ],
        "requestBody": Object {
          "content": Object {
            "application/json; Elastic-Api-Version=oas-test-version-1": Object {
              "schema": Object {
                "additionalProperties": false,
                "properties": Object {
                  "foo": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "foo",
                ],
                "type": "object",
              },
            },
            "application/json; Elastic-Api-Version=oas-test-version-2": Object {
              "schema": Object {
                "additionalProperties": false,
                "properties": Object {
                  "foo": Object {
                    "type": "string",
                  },
                },
                "required": Array [
                  "foo",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json; Elastic-Api-Version=oas-test-version-1": Object {
                "schema": Object {
                  "additionalProperties": false,
                  "properties": Object {
                    "fooResponse": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fooResponse",
                  ],
                  "type": "object",
                },
              },
              "application/json; Elastic-Api-Version=oas-test-version-2": Object {
                "schema": Object {
                  "additionalProperties": false,
                  "properties": Object {
                    "fooResponse": Object {
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "fooResponse",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "No description",
          },
        },
      },
    },
    "/foo/{id}": Object {
      "get": Object {
        "operationId": "/foo/{id}#0",
        "parameters": Array [
          Object {
            "in": "header",
            "name": "elastic-api-version",
            "schema": Object {
              "default": "2023-10-31",
              "enum": Array [
                "2023-10-31",
              ],
              "type": "string",
            },
          },
          Object {
            "description": undefined,
            "in": "path",
            "name": "id",
            "required": true,
            "schema": Object {
              "maxLength": 36,
              "type": "string",
            },
          },
          Object {
            "description": undefined,
            "in": "query",
            "name": "page",
            "required": false,
            "schema": Object {
              "maximum": 999,
              "minimum": 1,
              "type": "number",
            },
          },
        ],
        "requestBody": Object {
          "content": Object {
            "application/json; Elastic-Api-Version=2023-10-31": Object {
              "schema": Object {
                "additionalProperties": false,
                "properties": Object {
                  "booleanDefault": Object {
                    "default": true,
                    "description": "defaults to to true",
                    "type": "boolean",
                  },
                  "ipType": Object {
                    "format": "ipv4",
                    "type": "string",
                  },
                  "literalType": Object {
                    "enum": Array [
                      "literallythis",
                    ],
                    "type": "string",
                  },
                  "map": Object {
                    "additionalProperties": Object {
                      "type": "string",
                    },
                    "type": "object",
                  },
                  "maybeNumber": Object {
                    "maximum": 1000,
                    "minimum": 1,
                    "type": "number",
                  },
                  "record": Object {
                    "additionalProperties": Object {
                      "type": "string",
                    },
                    "type": "object",
                  },
                  "string": Object {
                    "maxLength": 10,
                    "minLength": 1,
                    "type": "string",
                  },
                  "union": Object {
                    "anyOf": Array [
                      Object {
                        "description": "Union string",
                        "maxLength": 1,
                        "type": "string",
                      },
                      Object {
                        "description": "Union number",
                        "minimum": 0,
                        "type": "number",
                      },
                    ],
                  },
                  "uri": Object {
                    "default": "prototest://something",
                    "format": "uri",
                    "type": "string",
                  },
                },
                "required": Array [
                  "string",
                  "ipType",
                  "literalType",
                  "map",
                  "record",
                  "union",
                ],
                "type": "object",
              },
            },
          },
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json; Elastic-Api-Version=2023-10-31": Object {
                "schema": Object {
                  "maxLength": 10,
                  "minLength": 1,
                  "type": "string",
                },
              },
            },
            "description": "No description",
          },
        },
      },
    },
  },
  "security": Array [
    Object {
      "basicAuth": Array [],
    },
    Object {
      "apiKeyAuth": Array [],
    },
  ],
  "servers": Array [
    Object {
      "url": "https://test.oas",
    },
  ],
  "tags": undefined,
}
`;
